# titanic

./: .gitignore  LICENSE.txt  README.md  notebook.ipynb  prediction.csv  pyproject.toml  requirements.txt
src/titanic/: __init__.py  titanic_classifier.py  titanic_dataset.py
